--- a/css/confirmation.css
+++ b/css/confirmation.css
@@ -48,4 +48,17 @@ table tr td {
         margin: 0 auto;
         padding-top: 80px;
     }
+    .confirmation p {
+        padding-top: 30px;
+        line-height: 1.5em;
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width:1080px) {
+    .confirmation {
+        width: 70%;
+        margin: 0 auto;
+        padding-top: 80px;
+    }
 }
