--- a/css/contact.css
+++ b/css/contact.css
@@ -66,7 +66,6 @@
     background-color: #fff;
     border: 1px solid #333;
     opacity: 0.8;
-    
 }
 /* CONTACT */
 
@@ -79,7 +78,7 @@
         width: 100%;
         height: auto;
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     .contact-tel {
         width: 100%;
@@ -92,7 +91,7 @@
         line-height: 40px;
     }
     .contact-tel h4 span {
-        font-size: 18px;
+        font-size: 20px;
     }
     .contact-tel h4 .fa-phone-alt {
         font-size: 18px;
@@ -121,7 +120,7 @@
         width: 100%;
         height: auto;
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
     .contact-tel {
         width: 100%;
@@ -153,6 +152,7 @@
     }
     .contact-mail p a {
         font-size: 24px;
+        padding: 20px;
     }
     /* CONTACT */
 }
