--- a/css/service_content.css
+++ b/css/service_content.css
@@ -23,7 +23,7 @@
     position: relative;
 }
 .company-contents-img {
-    width: 769px;
+    width: 54%;
     height: 502px;
     opacity: .8;
 }
@@ -66,7 +66,7 @@
     justify-content: center;
     position: absolute;
     top: 75px;
-    left: 15%;
+    left: 25%;
     box-shadow: 20px 20px 14px rgba(0, 0, 0, 0.4);
     background-color: #fff;
 }
@@ -88,7 +88,7 @@
 }
 .item-lineup-title h4 {
     padding: 20px;
-    
+    text-align: center;
     font-size: 26px;
     color: white;
     border-radius: 4px;
