--- a/css/contact_form.css
+++ b/css/contact_form.css
@@ -78,22 +78,23 @@
         margin: 0 auto;
     }
     .form-item {
-        padding: 10px 1em;
+        padding: 20px 0;
         display: grid;
-        grid-template-columns: 30% 70%;
+        grid-template-columns: 100%;
     }
     .form-label {
         padding-top: 8px;
-        font-size: 12px;
+        padding-bottom: 10px;
+        font-size: 16px;
     }
     .form-item input {
         padding: 5px;
-        font-size: 12px;
+        font-size: 16px;
         border: 1px solid #ddd;
     }
     .form-item textarea {
         padding: 5px;
-        font-size: 14px;
+        font-size: 16px;
         border: 1px solid #ddd;
     }
     .send {
@@ -120,52 +121,51 @@
         cursor: pointer;
         margin-left: 5px;
     }
+}
 
-
-    @media screen and (min-width: 481px) and (max-width:1080px) {
-        .contact-title h2 {
-            font-size: 32px;
-        }
-        .contact-form-container {
-            padding-top: 30px;
-            width: 90%;
-            margin: 0 auto;
-        }
-        .form-item {
-            padding: 10px 2em;
-            display: grid;
-            grid-template-columns: 30% 70%;
-        }
-        .form-label {
-            padding-top: 8px;
-            font-size: 12px;
-        }
-        .form-item input {
-            padding: 5px;
-            font-size: 12px;
-            border: 1px solid #ddd;
-        }
-        .form-item textarea {
-            padding: 5px;
-            font-size: 14px;
-            border: 1px solid #ddd;
-        }
-        .send-btn {
-            font-size: 18px;
-            padding: 5px 40px;
-            border-radius: 15px;
-            background-color: #213F8A;
-            cursor: pointer;
-            margin-bottom: 10px;
-        }
-        .back-btn {
-            color: #213F8A;
-            font-size: 18px;
-            padding: 5px 40px;
-            border-radius: 15px;
-            background-color: #fff;
-            border: 1px solid #213F8A;
-            cursor: pointer;
-        }
+@media screen and (min-width: 481px) and (max-width:1080px) {
+    .contact-title h2 {
+        font-size: 32px;
+    }
+    .contact-form-container {
+        padding-top: 30px;
+        width: 90%;
+        margin: 0 auto;
+    }
+    .form-item {
+        padding: 10px 2em;
+        display: grid;
+        grid-template-columns: 30% 70%;
+    }
+    .form-label {
+        padding-top: 8px;
+        font-size: 12px;
+    }
+    .form-item input {
+        padding: 5px;
+        font-size: 12px;
+        border: 1px solid #ddd;
+    }
+    .form-item textarea {
+        padding: 5px;
+        font-size: 14px;
+        border: 1px solid #ddd;
+    }
+    .send-btn {
+        font-size: 18px;
+        padding: 5px 40px;
+        border-radius: 15px;
+        background-color: #213F8A;
+        cursor: pointer;
+        margin-bottom: 10px;
+    }
+    .back-btn {
+        color: #213F8A;
+        font-size: 18px;
+        padding: 5px 40px;
+        border-radius: 15px;
+        background-color: #fff;
+        border: 1px solid #213F8A;
+        cursor: pointer;
     }
 }
