--- a/css/footer.css
+++ b/css/footer.css
@@ -62,7 +62,7 @@ footer {
         height: auto;
     }
     .footer-container {
-        width: 85%;
+        width: 90%;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
@@ -135,8 +135,13 @@ footer {
 
 @media screen and (min-width: 481px) and (max-width:780px) {
     /* FOOTER */
+    footer {
+    width: 100%;
+    height: 350px;
+    background-color: #231815;
+}
     .footer-container {
-        width: 92%;
+        width: 93%;
         margin: 0 auto;
     }
     .footer-right {
@@ -145,13 +150,13 @@ footer {
         padding-left: 70px;
     }
     .footer-table-left {
-        margin-left: 0;
+        margin-left: 20px;
     }
     .footer-table-left tr td{
         font-size: 8px;
     }
     .footer-table-right {
-        margin-left: 30px;
+        margin-left: 20px;
     }
     .footer-table-right tr td{
         font-size: 8px;
@@ -159,6 +164,13 @@ footer {
     }
     .footer-table-left tr td:first-child, .footer-table-right tr td:first-child {
         padding-right: 20px;
+    }
+    .vertical-line {
+        height: 230px;
+        position: absolute;
+        right: -0.5px;
+        top: 60px;
+        background-color: white;
     }
     /* FOOTER */
 }
