--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,11 @@
   text-decoration: none;
 }
 html {
+    height: 100%;
     scroll-behavior: smooth;
+}
+body{
+    height: 100%;
 }
 
 /* BODY */
@@ -148,8 +152,8 @@ nav {
 
     /* TOP */
     .top {
-        width: 100%;
-        height: 100vh;
+        /* width: 100%; */
+        /* height: 100vh; */
         background-image: url(../img/main480.jpg);
         background-size: cover;
     }
@@ -157,7 +161,6 @@ nav {
     /* HEADER */
     header {
         width: 100%;
-        height: 100vh;
         padding-top: 0;
         padding-right: 0;
     }
